# job-app

./: .gitignore  .gitlab-ci.yml  README.md  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: ai-review.yml
core/: utils.py
dictionary/: admin.py  models.py
dictionary/migrations/: 0001_initial.py  0002_tag_icon.py  0003_vacancysource.py
employer/: admin.py  models.py  urls.py  views.py
employer/migrations/: 0001_initial.py  0002_alter_employer_brand_name_alter_employer_description_and_more.py  0003_alter_employer_logo.py  0004_employer_address.py
job_search/: asgi.py  settings.py  urls.py  views.py  wsgi.py
kved/: admin.py  apps.py  models.py
kved/migrations/: 0001_initial.py
location/: admin.py  models.py
location/migrations/: 0001_initial.py
position/: admin.py  models.py
position/migrations/: 0001_initial.py  0002_jobtitle.py
resume/: models.py  urls.py  views.py
resume/migrations/: 0001_initial.py
speciality/: admin.py  models.py
speciality/migrations/: 0001_initial.py  0002_alter_knowledgefield_options_and_more.py
templates/: base.html
templates/employer/: employer_detail.html  employer_form.html  list.html
templates/includes/: pagination.html
templates/registration/: login.html
templates/resume/: public_list.html  resume_confirm_delete.html  resume_detail.html  resume_form.html  resume_list.html
templates/user/: dashboard_candidate.html  dashboard_recruiter.html  register.html
user/: forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  (+1 more)
vacancy/: admin.py  models.py  urls.py  views.py
(+16 files in other folders)
