[project]
name = "job-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.9",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "pytest-django>=4.11.1",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 78
target-version = "py312"
exclude = [
    "migrations",
    "__pycache__",
    ".venv",
    "static",
    "doc",
]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "UP", "DJ", "B", "RUF"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D203", # конфліктує з D211
    "D213", # конфліктує з D212
    "F401",
    "RUF100",
    "I001",
    "DJ001",
]
